# pinocchio

./: .ci-deps  .clang-format  .clangd  .cmake-format.yaml  .coveragerc  .gersemirc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis-yml  .travis.yml  :q!  CHANGELOG.md  CITATION.bib  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  COPYING.LESSER  LICENSE  NEWS  README.md  README.md~  _config.yml  _config.yml~  authors.html  colcon.pkg  development.html  documentation.html  download.html  download.md  faq.md  flake.nix  getting-started.html  index.html  package.xml  pinocchio.pc.cmake  pixi.toml  pyproject.toml  (+7 more)
benchmark/: CMakeLists.txt  README.md  model-fixture.hpp  numerical-acc-prox.cpp  plot.py  timings-caba.cpp  timings-cg.cpp  timings-cholesky.cpp  timings-constrained-dynamics-derivatives.cpp  timings-contact-dynamics-all-robots.cpp  timings-contact-dynamics-derivatives.cpp  timings-contact-dynamics.cpp  timings-cppad-jit.cpp  timings-delassus-operations.cpp  timings-derivatives.cpp  timings-eigen.cpp  timings-geometry.cpp  timings-impulse-dynamics-derivatives.cpp  timings-impulse-dynamics.cpp  timings-jacobian.cpp  timings-parallel.cpp  timings-spatial.cpp  timings.cpp  timings_cg_v7.cpp  timings_cg_v7.sh
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  __init__.py  algorithms.hpp  context.hpp  data.hpp  eigen_container.hpp  explog.hpp  expose-SE3.cpp  expose-data.cpp  expose-explog.cpp  expose-force.cpp  expose-frame.cpp  expose-geometry.cpp  expose-inertia.cpp  expose-joints.cpp  expose-model.cpp  expose-motion.cpp  expose-parsers.cpp  force.hpp  frame.hpp  fwd.hpp  geometry-data.hpp  geometry-model.hpp  geometry-object.hpp  inertia.hpp  joint-derived.hpp  joint.hpp  joints-models.hpp  joints-variant.hpp  model.hpp  module.cpp  motion.hpp  parsers.hpp  pinocchiopy.pc.cmake  pybind11.hpp  python.hpp  robot_wrapper.py  rpy.py  se3.hpp
bindings/python_nb/: CMakeLists.txt  module.cpp
examples/: CMakeLists.txt  README.md  anymal-simulation.py  append-urdf-model-with-another-model.py  build-reduced-model.cpp  build-reduced-model.py  candlewick-viewer-solo.py  capsule-approximation.py  cartpole-casadi.py  casadi-quadrotor-ocp.py  cassie-simulation.py  collision-with-point-clouds.py  collisions.cpp  collisions.py  contact-cholesky.py  d-display.cpp  display-shapes-meshcat.py  display-shapes.py  display_shapes.py  floating-base-velocity-viewer.py  forward-dynamics-derivatives.cpp  forward-dynamics-derivatives.py  geometry-models.cpp  geometry-models.py  gepetto-viewer.py  i-inverse-kinematics.cpp  i-inverse-kinematics.py  id-derivatives.py  interpolation-SE3.cpp  inverse-dynamics-derivatives.cpp  inverse-dynamics-derivatives.py  inverse-dynamics.cpp  inverse-dynamics.py  inverse-kinematics-3d.cpp  inverse-kinematics-3d.py  inverse-kinematics.cpp  inverse-kinematics.py  kinematics-derivatives.cpp  kinematics-derivatives.py  meshcat-viewer-dae.py  (+30 more)
examples/autodiff/: CMakeLists.txt  autodiff-rnea.cpp  autodiff-rnea.py
examples/casadi/: CMakeLists.txt  cartpole.py  casadi-aba.cpp  casadi-crba.cpp  casadi-rnea.cpp  quadrotor-ocp.py  simulation-pendulum-variational.ipynb
examples/codegen/: CMakeLists.txt  codegen-crba.cpp  codegen-rnea.cpp  codegen-rnea.py
examples/cppad/: CMakeLists.txt  autodiff-rnea.cpp  autodiff-rnea.py
examples/python/: README.md  collision-detection.py  fd-derivatives.py  gepetto-viewer.py  id-derivatives.py  kinematics-derivatives.py  load-romeo.py  load-urdf.py  meshcat-viewer.py  robot-wrapper-viewer.py
src/: CMakeLists.txt  assert.hpp  context.hpp  deprecated-macros.hpp  deprecated-namespaces.hpp  deprecation.hpp  eigen-macros.hpp  exception.hpp  fwd.hpp  macros.hpp  traits.hpp
src/actuators/: actuator-model.hpp  dc-linear-first-order-motor-model.hpp  dc-linear-motor-model.hpp  dc-non-linear-motor-model.hpp  dc-temp-current-nl-motor-model.hpp  dc-temp-non-linear-motor-model.hpp  dc-two-snd-order-linear-motor-model.hpp
src/algorithm/: aba-derivatives-wo-aba.hpp  aba-derivatives-wo-aba.hxx  aba-derivatives.cpp  aba-derivatives.hpp  aba-derivatives.hxx  aba.cpp  aba.hpp  aba.hxx  admm-solver.hpp  admm-solver.hxx  broadphase-callbacks.hpp  broadphase.hpp  center-of-mass-derivatives.cpp  center-of-mass-derivatives.hpp  center-of-mass-derivatives.hxx  center-of-mass.cpp  center-of-mass.hpp  center-of-mass.hxx  centroidal-derivatives.cpp  centroidal-derivatives.hpp  centroidal-derivatives.hxx  centroidal.cpp  centroidal.hpp  centroidal.hxx  check.hpp  check.hxx  chol.m  cholesky.cpp  cholesky.hpp  cholesky.hxx  collision.hpp  collision.hxx  collisions.hpp  compute-all-terms.cpp  compute-all-terms.hpp  compute-all-terms.hxx  compute-all-terms.txx  constrained-dynamics-derivatives.cpp  constrained-dynamics-derivatives.hpp  constrained-dynamics-derivatives.hxx  (+101 more)
src/autodiff/: casadi-algo.hpp  casadi.hpp  cppad.hpp
src/codegen/: code-generator-algo.hpp  code-generator-base.hpp  cppadcg.hpp
src/collision/: collision.cpp  distance.cpp
src/math/: cppad.hpp  (+18 more)
unittest/: CMakeLists.txt  CMakeLists.txt.orig  aba-derivatives.cpp  aba.cpp  actuators.cpp  algo-check.cpp  all-joints.cpp  boost-multiprecision.cpp  broadphase.cpp  cartesian-product-liegroups.cpp  casadi-algo-derivatives.cpp  casadi-algo.cpp  casadi-basic.cpp  casadi-joints.cpp  casadi-spatial.cpp  center-of-mass-derivatives.cpp  centroidal-derivatives.cpp  centroidal.cpp  cholesky.cpp  classic-acceleration.cpp  closed-loop-dynamics.cpp  com.cpp  compute-all-terms.cpp  constrained-dynamics-derivatives.cpp  constrained-dynamics.cpp  constraint-variants.cpp  constraint.cpp  contact-cholesky.cpp  contact-dynamics-derivatives-3d.cpp  contact-dynamics-derivatives-6d.cpp  contact-dynamics-derivatives-correction.cpp  contact-dynamics-derivatives-mix.cpp  contact-dynamics-derivatives-no-contact.cpp  contact-dynamics-derivatives-sparse-constraint.cpp  contact-dynamics-derivatives.cpp  contact-dynamics.cpp  contact-inverse-dynamics.cpp  contact-models.cpp  copy.cpp  coulomb-friction-cone.cpp  (+97 more)
utils/: CMakeLists.txt  pinocchio_read_model.cpp
(+3318 files in other folders)
